--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title> Airpots in the United States (2009)</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <style>
         html, body, #map { width: 100%; height: 100%; margin: 0; background: #fff; }
@@ -67,10 +67,11 @@ for (i = 0; i < 1; i++) {
     $('head').append($("<style> .marker-color-" + (i + 1).toString() + " { color: " + colors[i] + "; font-size: 15px; text-shadow: 0 0 3px #ffffff;} </style>"));
 }
 // Get GeoJSON and put on it on the map when it loads
-Airports= L.geoJson.ajax("assets/airports.geojson",{
-    });
-// Add the cellTowers to the map.
-Airports.addTo(mymap);
+// Airports= L.geoJson.ajax("assets/airports.geojson",{
+//
+//     });
+// // Add the cellTowers to the map.
+// Airports.addTo(mymap);
 //}
 // Get GeoJSON and put on it on the map when it loads
 Airports= L.geoJson.ajax("assets/airports.geojson", {
@@ -78,23 +79,31 @@ Airports= L.geoJson.ajax("assets/airports.geojson", {
     // Then each (point) feature will bind a popup window.
     // The content of the popup window is the value of `feature.properties.company`
     onEachFeature: function (feature, layer) {
-        layer.bindPopup(feature.properties.CNTL_TWR);
+        if (feature.properties.CNTL_TWR == "Y") {
+                layer.bindPopup("there is");
+        } else {
+            layer.bindPopup("there is not");
+        }
     },
-    pointToLayer: function (feature, coordinates) {
-      var id = 0;
-      if (feature.properties.company == "New Cingular") { id = 0; }
-      else if (feature.properties.company == "Cellco")  { id = 1; }
-      else if (feature.properties.company == "RCC Minnesota")  { id = 2; }
-      else if (feature.properties.company == "Verizon")  { id = 3; }
-      else if (feature.properties.company == "US Cellular")  { id = 4; }
-      else if (feature.properties.company == "Hood River Cellular")  { id = 5; }
-      else if (feature.properties.company == "Medford Cellular")  { id = 6; }
-      else if (feature.properties.company == "Oregon RSA")  { id = 7; }
-      else { id = 8;} // "Salem Cellular"
-      return L.marker(latlng, {icon: L.divIcon({className: 'fa fa-signal marker-color-' + (id + 1).toString() })});
+     pointToLayer: function (feature, latlng) {
+    //   var id = 0;
+      if (feature.properties.CNTL_TWR== "Y")
+      {
+        return L.marker(latlng, {icon: L.divIcon({className: 'fas fa-plane'})});
+      }
+    //   else if (feature.properties.company == "Cellco")  { id = 1; }
+    //   else if (feature.properties.company == "RCC Minnesota")  { id = 2; }
+    //   else if (feature.properties.company == "Verizon")  { id = 3; }
+    //   else if (feature.properties.company == "US Cellular")  { id = 4; }
+    //   else if (feature.properties.company == "Hood River Cellular")  { id = 5; }
+    //   else if (feature.properties.company == "Medford Cellular")  { id = 6; }
+    //   else if (feature.properties.company == "Oregon RSA")  { id = 7; }
+     else {
+        return L.marker(latlng, {icon: L.divIcon({className: 'fas fa-plane-departure'})});
+      }  // "Salem Cellular"
     },
     attribution: 'Airport Data &copy; Map Bo Zhao | Oregon counties &copy; Oregon Explorer | Base Map &copy; CartoDB | Made By Dave Danner'
-}).addTo(mymap);
+  }).addTo(mymap);
   // 6. Set function for color ramp
   colors = chroma.scale('OrRd').colors(5); //colors = chroma.scale('OrRd').colors(5);
   function setColor(density) {
